--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.mcaserta.neontest"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -49,4 +49,8 @@ dependencies {
     // Dagger
     implementation 'com.google.dagger:dagger:2.13'
     kapt 'com.google.dagger:dagger-compiler:2.13'
+
+    implementation 'com.android.support:appcompat-v7:28.1.1'
+    implementation 'com.android.support:design:28.1.1'
+    implementation 'com.android.support:cardview-v7:28.1.1'
 }
