--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.1.1'
     implementation 'com.android.support:design:28.1.1'
     implementation 'com.android.support:cardview-v7:28.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
